<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/events8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/username"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/user_symbol"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="16dp"
            android:alpha="0.8"
            android:src="@drawable/user" />


        <ScrollView
            android:id="@+id/scrollview_signup_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/border">

            <LinearLayout
                android:id="@+id/inputFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp">

                <TextView
                    android:id="@+id/name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/signup_email_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/email"
                    android:textStyle="bold"  />

                <TextView
                    android:id="@+id/phone_number_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone"
                    android:textStyle="bold"  />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>